<resources>
    <string name="app_name">Y-not (KOR)</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tab_fragment1">TabFragment1</string>
    <string name="title_activity_tab_fragment2">TabFragment2</string>
    <string name="title_activity_tab_fragment3">TabFragment3</string>
    <string name="title_activity_myinfo">내 프로필</string>
    <string name="title_activity_editmyinfo">프로필 편집</string>
    <string name="title_activity_friendinfo">친구프로필</string>
    <string name="title_activity_tab_fragment5">TabFragment5</string>
    <string name="tab1_name">멤버</string>
    <string name="tab_name_mem">멤버</string>
    <string name="tab_name_cht">채팅</string>
    <string name="tab_name_sns">실명</string>
    <string name="tab_name_sns_uk">익명</string>
    <string name="tab_name_set">설정</string>
    <string name="no_contacts">No Contacts</string>

    <string name="self_chat">셀프채팅</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the contact</string>
    <string name="error_message">You must enter a contact name</string>
    <string name="button_cancel">취소</string>
    <string name="button_delete">삭제</string>
    <string name="menuitem_add">추가</string>
    <string name="menuitem_edit">편집</string>
    <string name="menuitem_delete">삭제</string>
    <string name="menuitem_call">전화</string>
    <string name="menuitem_chat">채팅</string>
    <string name="menuitem_sns">SNS</string>
    <string name="ok">OK</string>
    <string name="button_save">저장</string>
    <string name="hint_phone">연락처</string>
    <string name="hint_state">상태</string>
    <string name="hint_name">이름</string>
    <string name="label_name">이름</string>
    <string name="label_phone">연락처</string>
    <string name="label_state">상태</string>
    <string name="friend">친구</string>
    <string name="my_profile">내 프로필</string>
    <string name="refresh">동기화하기</string>


    <string name="hello_world">Hello world!</string>
    <string name="button_description">Symbols Button</string>
    <string name="chat_hint">Show Symbol here</string>
    <string name="post_eng">Post</string>
    <string name="post_kor">보내기</string>
    <string name="erase">Erase</string>
    <string name="msg_fail_init">Fail initialize TTS.</string>
    <string name="msg_not_support_lang">This language does not support.</string>
    <string name="msg_success_init">Please input text and click button.</string>
    <string name="new_msg">새로운 메시지입니다 !</string>
    <string name="opposite_user_logout">The user has logged out. You can not send message anymore !</string>
    <string name="in_register">Registering ...</string>
    <string name="in_send">Sending ...</string>
    <string name="in_logout">Logouting ...</string>
    <string name="register_success">Successfully Registered</string>
    <string name="gcm_not_support">This device is not supported</string>
    <string name="login1_hint">이름</string>
    <string name="login2_hint">폰번호</string>
    <string name="login_button">로그인</string>
    <string name="backkey_title">종료하시겠습니까?</string>
    <string name="backkey_content"> </string>
    <string name="backkey_yes">예</string>
    <string name="backkey_no">아니요</string>

    <string name="submit">전송</string>
    <string name="c_cntgood">좋아요 수</string>
    <string name="c_cntcomment">댓글 수</string>
    <string name="c_contents">실명 SNS 게시글 입니다.</string>
    <string name="c_user">권예진</string>
    <string name="camera">카메라</string>
    <string name="gallery">사진첩</string>
    <string name="upload">올리기</string>
    <string name="btngood">좋아요</string>
    <string name="btncomment">댓글 달기</string>
    <string name="text1">#InsideOut</string>
    <string name="text2">#Mini</string>
    <string name="text3">#ToyStory</string>
    <string name="comment1">가가가가가가가가각가가가가가</string>
    <string name="comment2">나나나나난나나나나나나나나나</string>
    <string name="comment3">다다다다다다다다다다다다다다</string>
    <string name="comment4">라라라라라라라라라라라라라</string>
</resources>
