<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >



    <ImageView
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:id="@+id/edit_my_profile"
        android:src="@drawable/a"
        android:layout_above="@+id/nameEditText"
        android:layout_centerHorizontal="true"

        />

    <TextView
        android:id="@+id/nameLabel"
        style="@style/ContactLabelTextView"
        android:layout_width="wrap_content"
        android:text="@string/label_name"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/nameEditText"
        android:layout_alignBaseline="@+id/nameEditText"

        />
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        style="@style/ContactTextView"
        android:inputType="textPersonName|textCapWords" >
    </EditText>

    <TextView
        android:id="@+id/phoneLabel"
        android:text="@string/label_phone"
        style="@style/ContactLabelTextView"
        android:layout_below="@+id/nameTextView"
        android:layout_toLeftOf="@+id/phoneEditText"
        android:layout_alignBaseline="@+id/phoneEditText"
        android:layout_marginRight="10dp"
        />


    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        android:layout_below="@+id/nameEditText"
        android:layout_centerHorizontal="true"
        style="@style/ContactTextView"
        android:layout_marginTop="10dp"
        android:inputType="phone" >
    </EditText>


    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneEditText"
        android:layout_centerHorizontal="true"
        android:text="@string/button_save"
        android:layout_marginTop="10dp"
        android:background="#FF9F0D"
        >
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cancle"
        android:layout_toRightOf="@+id/btn_save"
        android:text="@string/button_cancel"
        android:layout_below="@+id/phoneEditText"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="#FF9F0D"
        android:layout_marginLeft="20dp"/>


</RelativeLayout>


