<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        card_view:cardCornerRadius="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp">
                <ImageButton
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/image_profile"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_border"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textview_name"
                    android:layout_gravity="center"
                    android:text="@string/c_user"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/image"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textview"
                    android:text="@string/c_contents"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btngood"
                    android:id="@+id/btn_good" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cnt_good"
                    android:text="@string/c_cntgood"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="5dp"/>
                <Button
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btncomment"
                    android:id="@+id/btn_comment" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cnt_comment"
                    android:text="@string/c_cntcomment"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="5dp"/>


            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>